# usv_ign_platform

./: CMakeLists.txt  compile_commands.json  package.xml
config/: control_modes.yaml  default_controller.yaml
include/usv_ign_platform/: ignition_bridge.hpp  usv_ign_platform.hpp
launch/: usv_ign_platform.py
lib/: ignition_bridge.cpp  usv_ign_platform.cpp
src/: usv_ign_platform.cpp  usv_ign_platform_main.cpp
